# pozakres

./: CMakeLists.txt  README.md
include/: application.hpp  detail.hpp  filter.hpp  instrument.hpp  markov.hpp  melody.hpp  noise.hpp  oscillator.hpp  piece.hpp  player.hpp  random.hpp  wave.hpp
src/: CMakeLists.txt  application.cpp  detail.cpp  filter.cpp  instrument.cpp  main.cpp  melody.cpp  piece.cpp  player.cpp  random.cpp  resource.rc
